refactor(day01): extracted some common code

--- a/day01/challenge.yml
+++ b/day01/challenge.yml
@@ -28,5 +28,5 @@ parts:
       - name: input
         stdin:
           file: input.txt
-        # expected:
-        #   stdout: "3574690"
+        expected:
+          stdout: "22565391"
