feat(day04): part 2 solved

--- a/day04/challenge.yml
+++ b/day04/challenge.yml
@@ -27,6 +27,10 @@ parts:
     cases:
       - name: test
         stdin: *test-input
+        expected:
+          stdout: "9"
       - name: input
         stdin:
           file: input.txt
+        expected:
+          stdout: "1936"
