feat(day05): part 2 works for test, but can't topologically sort page rules in input data

--- a/day05/challenge.yml
+++ b/day05/challenge.yml
@@ -18,5 +18,7 @@ parts:
     cases:
       - name: test
         stdin: *test-input
+        expected:
+          stdout: "123"
       - name: input
         stdin: *final-input
