feat(day13): solved part 2

--- a/day13/challenge.yml
+++ b/day13/challenge.yml
@@ -20,3 +20,5 @@ parts:
         stdin: *test-input
       - name: input
         stdin: *final-input
+        expected:
+          stdout: "76358113886726"
