--- a/day17/challenge.yml
+++ b/day17/challenge.yml
@@ -4,21 +4,22 @@ parts:
     command: uiua run --no-color part1.ua
     cases:
       - name: test
-        stdin: &test-input
+        stdin:
           file: test.txt
         expected:
           stdout: "4,6,3,5,6,3,5,2,1,0"
       - name: input
         stdin: &final-input
           file: input.txt
+        expected:
+          stdout: "1,2,3,1,3,2,5,3,1"
   - name: part2
     command: uiua run --no-color part2.ua
     cases:
       - name: test
-        stdin: *test-input
-        expected:
-          stdout: "123"
+        stdin:
+          file: test2.txt
       - name: input
         stdin: *final-input
         expected:
-          stdout: "5502"
+          stdout: "105706277661082"
