--- a/day18/challenge.yml
+++ b/day18/challenge.yml
@@ -19,6 +19,12 @@ parts:
     command: uiua run --no-color part2.ua
     cases:
       - name: test
+        arguments: ["7", "12"]
         stdin: *test-input
+        expected:
+          stdout: "6,1"
       - name: input
+        arguments: ["71", "1024"]
         stdin: *final-input
+        expected:
+          stdout: "20,44"
